# control-parque-vehicular-backend

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230123034838_create_vehicules.down.sql  20230123034838_create_vehicules.up.sql  20230123034842_create_users.down.sql  20230123034842_create_users.up.sql  20230123034849_create_requests.down.sql  20230123034849_create_requests.up.sql  20230211072314_create_vehicules.down.sql  20230211072314_create_vehicules.up.sql  20230211073414_create_departments.down.sql  20230211073414_create_departments.up.sql  20230211073712_create_users.down.sql  20230211073712_create_users.up.sql  20230211073909_create_requests.down.sql  20230211073909_create_requests.up.sql  20230214072155_create_signup_tokens_table.up.sql  20230217165016_seed_admin_user.down.sql  20230217165016_seed_admin_user.up.sql  20230505164616_test_mig.down.sql  20230505164616_test_mig.up.sql
scripts/: init_db.sh  init_redis.sh  init_smtp.sh
src/: api_response.rs  config.rs  configuration.rs  database.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs  user.rs
src/authentication/: jwt.rs  jwt_session.rs  middleware.rs  mod.rs  password.rs
src/models/: mod.rs  user.rs  vehicule.rs
src/models/user/: routes.rs
src/routes/: email_check.rs  health_check.rs  mod.rs  struct_check.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs  signup_confirm.rs
src/routes/department/: delete.rs  departments.rs  get.rs  mod.rs  patch.rs  post.rs
src/routes/images/: image.rs  mod.rs
src/routes/requests/: delete.rs  get.rs  post.rs
src/routes/user/: me.rs  mod.rs  user.rs  users.rs  utils.rs
src/routes/users/: delete.rs  get.rs  image.rs  mod.rs  patch.rs  sqlx.rs  utils.rs
src/routes/users/me/: get.rs  image.rs  mod.rs  password.rs  patch.rs
src/routes/vehicules/: delete.rs  get.rs  image.rs  mod.rs  patch.rs  post.rs  vehicules.rs
src/upload/: image.rs
tests/api/: health_check.rs  helpers.rs  login.rs  logout.rs  main.rs  register.rs
