[package]
name = "control-parque-vehicular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "control-parque-vehicular"

[dependencies]
actix-cors = "0.6.4"
actix-files = { version = "0.6.2", features = ["tokio-uring"] }
actix-multipart = "0.5.0"
actix-web = "4.2.1"
actix-web-lab = "0.18.9"
anyhow = "1.0.69"
argon2 = { version = "0.4.1", features = ["std"] }
chrono = { version = "0.4.23", features = ["serde"] }
config = "0.13.3"
futures = "0.3.26"
image = "0.24.5"
jsonwebtoken = "8.2.0"
lettre = { version = "0.10.2", features = ["serde", "tracing", "tokio1", "tokio1-native-tls"] }
lettre_email = "0.9.4"
mime = "0.3.16"
#nonblock-logger = { version = "0.2.2", features = ["color", "dbg"] }
rand = { version = "0.8.5", features = ["std_rng"] }
redis = { version = "0.22.3", features = ["tokio-comp", "tokio-native-tls-comp", "connection-manager"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["chrono", "postgres", "uuid", "runtime-actix-rustls", "macros", "offline"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
common = { path = "../common/", features = ["backend"] }

[dev-dependencies]
fake = "2.5.0"
once_cell = "1.17.0"
reqwest = { version = "0.11.14", features = ["json", "rustls-tls", "cookies"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
